--- a/src/main/frontend/src/primereact/sass/layout/_login.scss
+++ b/src/main/frontend/src/primereact/sass/layout/_login.scss
@@ -1,7 +1,11 @@
 .login-body {
-    background:  url("../images/login/login.png") top left no-repeat #f7f7f7;
-    background-size: 100% auto;
-    height: auto;
+    background:  url("../images/login/background.svg") 420px 0 no-repeat #f7f7f7;
+    background-size: 100% 100%;
+    height: calc(100% - 100px);
+    padding-top: 100px;
+}
+.login-title {
+  color: #3F51B5;
 }
 
 .login-panel {
@@ -9,44 +13,44 @@
     width: 350px;
     min-height: 440px;
     padding: 50px 20px;
-    margin: 100px auto 0 auto;
-    
+    margin: 0 auto 0 auto;
+
     .ui-g {
         .ui-g-12 {
             padding: 25px 40px;
-            
+
             .ui-button {
                 margin-bottom: 20px;
             }
         }
     }
-    
+
     .ui-button {
         &:hover {
-            background-color: $primaryDarkColor;   
+            background-color: $primaryDarkColor;
         }
-        
+
         &:focus {
             outline: 0 none;
             background-color: lighten($primaryColor,10%);
         }
-        
+
         &.secondary {
             &:hover {
-                background-color: $accentDarkColor;   
+                background-color: $accentDarkColor;
             }
-            
+
             &:focus {
                 outline: 0 none;
                 background-color: lighten($accentColor,10%);
             }
         }
     }
-    
+
     .ui-inputtext {
         &:focus {
             border-width: 0 0 2px 0;
-            border-color: $primaryColor;  
+            border-color: $primaryColor;
             padding-bottom: 0px;
         }
     }
@@ -61,9 +65,9 @@
     color: $textSecondaryColor;
 }
 
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) { 
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
     .login-body {
-        background: url("../images/login/login2x.png") top left no-repeat #f7f7f7; 
+        background: url("../images/login/login2x.png") top left no-repeat #f7f7f7;
         background-size: 100% auto;
     }
 }
@@ -84,11 +88,11 @@
         min-height: 440px;
         padding: 40px 20px;
         margin: 75px auto 0 auto;
-        
+
         .ui-g {
             .ui-g-12 {
                 padding: 20px 20px;
-                
+
                 .ui-button {
                     margin-top: 30px
                 }
