--- a/src/main/frontend/src/primereact/sass/layout/_login.scss
+++ b/src/main/frontend/src/primereact/sass/layout/_login.scss
@@ -65,29 +65,29 @@
     color: $textSecondaryColor;
 }
 
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-    .login-body {
-        background: url("../images/login/login2x.png") top left no-repeat #f7f7f7;
-        background-size: 100% auto;
-    }
-}
 
 @media (max-width: 1024px) {
+    .login-body {
+      background: url("../images/login/background.svg") 320px 0 no-repeat #f7f7f7;
+    }
     .login-panel {
         text-align: center;
         min-height: 440px;
-        margin: 100px auto 0 auto;
+        margin: 0 auto 0 auto;
 
     }
 }
 
 @media (max-width: 640px) {
+    .login-body {
+      background: url("../images/login/background.svg") 120px 0 no-repeat #f7f7f7;
+    }
     .login-panel {
         text-align: center;
         width: 300px;
         min-height: 440px;
         padding: 40px 20px;
-        margin: 75px auto 0 auto;
+        margin: 0 auto 0 auto;
 
         .ui-g {
             .ui-g-12 {
